[gd_scene load_steps=4 format=3 uid="uid://c6veuv4jsp811"]

[ext_resource type="Script" path="res://Scripts/acciones.gd" id="1_etlos"]
[ext_resource type="PackedScene" uid="uid://qt026tfmecvh" path="res://Scenes/Player.tscn" id="2_yiu1k"]
[ext_resource type="SpriteFrames" uid="uid://bftorln374wsx" path="res://Resources/doors.tres" id="3_k2bs5"]

[node name="Acciones" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_etlos")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 13

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Acciones"
horizontal_alignment = 1

[node name="ShuffleDoors" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Mezclar Puertas
"

[node name="ShuffleTreasures" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Mezclar Tesoros"

[node name="ShuffleDiscardDoors" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Mezclar descarte  de Puertas"

[node name="ShuffleDiscardTreasures" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Mezclar descarte  de Tesoros"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Players"
horizontal_alignment = 1

[node name="Player" parent="VBoxContainer" instance=ExtResource("2_yiu1k")]
layout_mode = 2
alignment = 1

[node name="Player2" parent="VBoxContainer" instance=ExtResource("2_yiu1k")]
layout_mode = 2
alignment = 1

[node name="Player3" parent="VBoxContainer" instance=ExtResource("2_yiu1k")]
layout_mode = 2
alignment = 1

[node name="Player4" parent="VBoxContainer" instance=ExtResource("2_yiu1k")]
layout_mode = 2
alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Card Preview"
horizontal_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="VBoxContainer/Control"]
scale = Vector2(0.65, 0.65)
sprite_frames = ExtResource("3_k2bs5")
frame = 6
centered = false

[connection signal="pressed" from="VBoxContainer/ShuffleDoors" to="." method="_on_shuffle_doors_pressed"]
[connection signal="pressed" from="VBoxContainer/ShuffleTreasures" to="." method="_on_shuffle_treasures_pressed"]
[connection signal="pressed" from="VBoxContainer/ShuffleDiscardDoors" to="." method="_on_shuffle_discard_doors_pressed"]
[connection signal="pressed" from="VBoxContainer/ShuffleDiscardTreasures" to="." method="_on_shuffle_discard_treasures_pressed"]
